Add unit and integration tests for MCP tool services (#1)